[gd_scene load_steps=4 format=3 uid="uid://bgcosxew0vi50"]

[ext_resource type="Script" path="res://Scripts/game_menu_button.gd" id="1_u3yh7"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_menu"]
bg_color = Color(0.905882, 0.435294, 0.317647, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_color = Color(0, 0, 0, 0.25098)
shadow_size = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_popup"]
bg_color = Color(0.14902, 0.27451, 0.32549, 0.9)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_color = Color(0, 0, 0, 0.25098)
shadow_size = 4

[node name="GameMenuButton" type="Control"]
layout_mode = 3
anchors_preset = 9
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = 160.0
offset_bottom = 80.0
grow_vertical = 2
script = ExtResource("1_u3yh7")

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_hover_color = Color(0.9, 0.9, 0.9, 1)
theme_override_colors/font_pressed_color = Color(0.8, 0.8, 0.8, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_menu")
text = "MENU"

[node name="MenuPopup" type="Panel" parent="."]
visible = false
layout_mode = 0
offset_top = 60.0
offset_right = 200.0
offset_bottom = 300.0
theme_override_styles/panel = SubResource("StyleBoxFlat_popup")

[node name="VBoxContainer" type="VBoxContainer" parent="MenuPopup"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 8

[node name="RulesButton" type="Button" parent="MenuPopup/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 18
text = "Game Rules"

[node name="SettingsButton" type="Button" parent="MenuPopup/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 18
text = "Settings"

[node name="ResumeButton" type="Button" parent="MenuPopup/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 18
text = "Resume Game"

[node name="MainMenuButton" type="Button" parent="MenuPopup/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 18
text = "Main Menu"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="MenuPopup/VBoxContainer/RulesButton" to="." method="_on_rules_button_pressed"]
[connection signal="pressed" from="MenuPopup/VBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="MenuPopup/VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="MenuPopup/VBoxContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
